[workspace]
members = ["crates/*"]
resolver = "2"

[profile]
[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
strip = "symbols"

[profile.test.package.'*']
codegen-units = 1
opt-level = 1

[workspace.dependencies]
anyhow = "1"
futures = "0.3"
maplit = "1"
near-workspaces = { version = "0.8", default-features = false }
owo-colors = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }

[workspace.dependencies.near-contract-standards]
version = "4"
git = "https://github.com/near/near-sdk-rs.git"
rev = "e4c924058e9159ff54a5bfc4adaa8b79ba04d876"

[workspace.dependencies.near-sdk]
version = "4"
git = "https://github.com/near/near-sdk-rs.git"
rev = "e4c924058e9159ff54a5bfc4adaa8b79ba04d876"
default-features = false
features = ["unit-testing", "unstable"]
