[workspace]
members = ["crates/*"]
resolver = "2"

[profile]
[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
strip = "symbols"

[profile.test.package.'*']
codegen-units = 1
opt-level = 1

[workspace.dependencies]
anyhow = "1"
async-stream = "0.3"
dotenv = "0.15"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
maplit = "1"
near-jsonrpc-client = "0.6"
near-lake-framework = "0.7"
near-workspaces = { version = "0.8", default-features = false }
once_cell = "1"
owo-colors = "3"
rayon = "1"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

[workspace.dependencies.near-contract-standards]
version = "4"
git = "https://github.com/near/near-sdk-rs.git"
rev = "e4c924058e9159ff54a5bfc4adaa8b79ba04d876"

[workspace.dependencies.near-sdk]
version = "4"
git = "https://github.com/near/near-sdk-rs.git"
rev = "e4c924058e9159ff54a5bfc4adaa8b79ba04d876"
default-features = false
features = ["unit-testing", "unstable"]
