[package]
name = "rtp-indexer"
version = "0.0.1"
authors = ["Mario Reder <mario.reder@pm.me>"]
edition = "2021"

[dependencies]
rtp-common = { path = "../rtp-common" }
rtp-lib = { path = "../rtp-lib" }
anyhow.workspace = true
async-stream.workspace = true
dotenv.workspace = true
futures.workspace = true
futures-core.workspace = true
futures-util.workspace = true
near-jsonrpc-client.workspace = true
near-lake-framework.workspace = true
once_cell.workspace = true
rayon.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
