[package]
name = "rtp-factory-lib"
version = "0.0.1"
authors = ["Mario Reder <mario.reder@pm.me>"]
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
rtp-common = { path = "../rtp-common" }
near-contract-standards.workspace = true
near-sdk.workspace = true
serde_json.workspace = true
thiserror.workspace = true
