[package]
name = "rtp-lib"
version = "0.0.1"
authors = ["Mario Reder <mario.reder@pm.me>"]
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
anstyle = "=1.0.2"
anstyle-parse = "=0.2.1"
clap = "~4.3"
clap_lex = "=0.5.0"
serde_json = "1"
thiserror = "1"

[dependencies.near-contract-standards]
version = "4"
git = "https://github.com/near/near-sdk-rs.git"
rev = "e4c924058e9159ff54a5bfc4adaa8b79ba04d876"

[dependencies.near-sdk]
version = "4"
git = "https://github.com/near/near-sdk-rs.git"
rev = "e4c924058e9159ff54a5bfc4adaa8b79ba04d876"
default-features = false
features = ["unit-testing", "unstable"]

[package.metadata.witgen]
export = true
