[package]
name = "rtp-test"
version = "0.0.1"
authors = ["Mario Reder <mario.reder@pm.me>"]
edition = "2021"

[dependencies]
anyhow = "1"
rtp-common = { path = "../rtp-common" }
rtp-lib = { path = "../rtp-lib" }
futures = "0.3"
maplit = "1"
near-workspaces = { version = "0.8", default-features = false }
owo-colors = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dependencies.near-contract-standards]
version = "4"
git = "https://github.com/near/near-sdk-rs.git"
rev = "89f8c2d776c8d00feb45239fdb15725527f1894b"

[dependencies.near-sdk]
version = "4"
git = "https://github.com/near/near-sdk-rs.git"
rev = "89f8c2d776c8d00feb45239fdb15725527f1894b"
default-features = false
features = ["unit-testing", "unstable"]
