[package]
name = "rtp-test"
version = "0.0.1"
authors = ["Mario Reder <mario.reder@pm.me>"]
edition = "2021"

[dev-dependencies]
rtp-common = { path = "../rtp-common" }
rtp-lib = { path = "../rtp-lib" }
anyhow.workspace = true
futures.workspace = true
maplit.workspace = true
near-contract-standards.workspace = true
near-sdk.workspace = true
near-workspaces.workspace = true
owo-colors.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
